--- a/index.html
+++ b/index.html
@@ -10,28 +10,15 @@
 
 <body>
     <div class="header">
-        <img class="img_burger_menu" src="img/icons8-menu-64.png" onclick="toggle(event, 'menu_popup', true)">
         <h1 class="app_title"> RDMP : Rapport des Dépenses Mensuelles Personnelles</h1>
     </div>
-    <div id="menu_popup">
-        <ul>
-            <li><a href="#vueConfigTitle" onclick="toggle(event, 'menu_popup', true)">Import / Export</a></li>
-            <li><a href="#vueSyntheseTitle" onclick="toggle(event, 'menu_popup', true)">Synthèse</a></li>
-            <li><a href="#vueGlobaleTitle" onclick="toggle(event, 'menu_popup', true)">Vue d'ensemble</a></li>
-            <li><a href="#vueResumeParCategorieTitle" onclick="toggle(event, 'menu_popup', true)">Resumé par
-                    categories</a></li>
-            <li><a href="#vueDetailsCategoriesTitle" onclick="toggle(event, 'menu_popup', true)">Détail par
-                    catégorie</a></li>
-            <li><a href="#vueGestionPrevisionTitle" onclick="toggle(event, 'menu_popup', true)">Gestion de prévision</a>
-            </li>
-        </ul>
-    </div>
+
 
     <div class="container">
 
 
         <h1>Import/Export <img class="toogle_img" id="vueConfigTitle" onclick="toggle(event, 'vueConfig')"
-                src="img/icons8-on-50.png" /> </h1>
+                src="img/icons8-off-50.png" /> </h1>
         <section id="vueConfig">
             <h2>Importer les transactions en CSV </h2>
             <p>Un fichier CSV mensuel exporté depuis la banque (ou depuis un autre rapport).
@@ -68,7 +55,7 @@
 
 
         <h1>Synthèse <img class="toogle_img" id="vueSyntheseTitle" onclick="toggle(event, 'vueSynthese')"
-                src="img/icons8-on-50.png" /> </h1>
+                src="img/icons8-off-50.png" /> </h1>
 
 
 
@@ -76,7 +63,7 @@
 
 
         <h1>Vue d'ensemble <img class="toogle_img" id="vueGlobaleTitle" onclick="toggle(event, 'vueGlobale')"
-                src="img/icons8-on-50.png" /> </h1>
+                src="img/icons8-off-50.png" /> </h1>
         <section id="vueGlobale">
             <h2>Entrées <span></span></h2>
             <table id="tableIn">
@@ -101,7 +88,7 @@
 
 
         <h1>Résumé par catégorie <img class="toogle_img" id="vueResumeParCategorieTitle"
-                onclick="toggle(event, 'vueResumeParCategorie')" src="img/icons8-on-50.png" /> </h1>
+                onclick="toggle(event, 'vueResumeParCategorie')" src="img/icons8-off-50.png" /> </h1>
         <section id="vueResumeParCategorie">
             <table id="tableResumeCategorie">
                 <tr>
@@ -114,11 +101,11 @@
 
 
         <h1>Détail par catégorie <img class="toogle_img" id="vueDetailsCategoriesTitle"
-                onclick="toggle(event, 'vueDetailsCategories')" src="img/icons8-on-50.png" /> </h1>
+                onclick="toggle(event, 'vueDetailsCategories')" src="img/icons8-off-50.png" /> </h1>
         <section id="vueDetailsCategories"></section>
 
         <h1>Resumé par mot clé <img class="toogle_img" id="toggleByCategory"
-                onclick="toggle(event, 'vueResumeKeywords')" src="img/icons8-on-50.png" /> </h1>
+                onclick="toggle(event, 'vueResumeKeywords')" src="img/icons8-off-50.png" /> </h1>
         <section id="vueResumeKeywords">
             <table id="tableResumeKeywords">
                 <tr>
@@ -131,7 +118,7 @@
 
 
         <h1>Gestion des prévisions <img class="toogle_img" id="vueGestionPrevisionTitle"
-                onclick="toggle(event, 'vueGestionPrevision')" src="img/icons8-on-50.png" /> </h1>
+                onclick="toggle(event, 'vueGestionPrevision')" src="img/icons8-off-50.png" /> </h1>
         <section id="vueGestionPrevision">
             <p>
                 Importer CSV : <input type="file" id="inputImportPrevisions" accept=".csv" /> Dernier import : <span
