--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
             <h2>Importer les transactions en CSV </h2>
             <p>Un fichier CSV mensuel exporté depuis la banque (ou depuis un autre rapport).
                 Les données du dernier fichier selectionné sont chargées automatiquement depuis le local storage!</p>
-            <input type="file" id="csvFileInput" accept=".csv" /> Dernier import : <span id="dateImportData"></span>
+            <input type="file" id="csvFileInput" accept=".csv" /> Dernier import : <span
+                id="lastImportDate_transactions"></span>
 
             <h2>Importer les catégories et mots-clés associés </h2>
             <p>C'est un fichier CSV. Il faut le mettre à jour et l'importer à chaque nouveau creancier.</p>
             <input type="file" id="keywordsCsvFileInput" accept=".csv" /> Dernier import : <span
-                id="dateImportKeywords"></span>
+                id="lastImportDate_categories"></span>
 
             <h2>Exporter en CSV</h2>
             <p>
@@ -122,7 +123,7 @@
         <section id="vueGestionPrevision">
             <p>
                 Importer CSV : <input type="file" id="inputImportPrevisions" accept=".csv" /> Dernier import : <span
-                    id="dateImportPrevisions"></span>
+                    id="lastImportDate_previsions"></span>
             </p>
             <p>
                 <button onclick="actionExportCSVPrevisions()">Exporter les prévsions</button> (importable)
