--- a/index.html
+++ b/index.html
@@ -15,60 +15,12 @@
 
 
     <div class="container">
-        <h1>Import/Export <img class="toogle_img" id="vueConfigTitle" onclick="actionToggle(event, 'vueConfig')"
-                src="img/icons8-off-50.png" /> </h1>
-        <section id="vueConfig">
 
-            <h2>Transactions en CSV </h2>
-            <p>Un fichier CSV mensuel exporté depuis la banque (ou depuis un autre rapport).
-                Les données du dernier fichier selectionné sont chargées automatiquement depuis le local storage! Les
-                colonnes 1, 3 et 7 sont respectivement : quand, quoi et combien.</p>
-            <input type="file" id="triggerImportCSVTransactions" accept=".csv" /> Dernier import : <span
-                id="lastImportDate_transactions"></span>
-            <p>
-                Export des données de base pour régenerer le rapport : la liste des entrées et sorties et la liste de
-                categories et keywords associés.</p>
-            <p>
-                <button onclick="actionExportCSVTransactions()">Exporter transactions</button> (importable)
-            </p>
+        <h1>Synthèse <img class="toogle_img" onclick="actionToggle(event, 'viewSynthese')"
+                src="img/icons8-off-50.png" />
+        </h1>
 
-
-            <h2>Catégories et mots-clés associés en CSV</h2>
-            <p>C'est un fichier CSV. Il faut le mettre à jour à chaque nouveau créancier et l'importer.</p>
-            <input type="file" id="triggerImportCSVCategories" accept=".csv" /> Dernier import : <span
-                id="lastImportDate_categories"></span>
-            <p>
-                <button onclick="actionExportCSVCategories()">Exporter catégories et mots-clés</button> (importable)
-            </p>
-
-
-            <h2>Prévisions en CSV</h2>
-            <p>
-                Importer CSV : <input type="file" id="triggerImportCSVPrevisions" accept=".csv" /> Dernier import :
-                <span id="lastImportDate_previsions"></span>
-            </p>
-            <p>
-                <button onclick="actionExportCSVPrevisions()">Exporter les prévsions</button> (importable)
-            </p>
-
-
-            <h2>Sauvegarder</h2>
-            <p>
-                Pour une sauvegrade complète du rapport il faut juste imprimer la page en PDF pour avoir un snapshot du
-                rapport (CTRL P).</p>
-            <p>
-                <button onclick="window.print()">Capturer la vue actuelle</button>
-            </p>
-
-        </section>
-
-
-
-
-        <h1>Synthèse <img class="toogle_img" id="vueSyntheseTitle" onclick="actionToggle(event, 'vueSynthese')"
-                src="img/icons8-off-50.png" /></h1>
-
-        <section id="vueSynthese">
+        <section id="viewSynthese">
             <h2>Totaux budget</h2>
             <table id="tableSynthese1"></table>
             <h2>Totaux mois</h2>
@@ -79,34 +31,52 @@
 
 
 
-        <h1>Vue d'ensemble <img class="toogle_img" id="vueGlobaleTitle" onclick="actionToggle(event, 'vueGlobale')"
-                src="img/icons8-off-50.png" /> </h1>
-        <section id="vueGlobale">
+        <h1>Transactions <img class="toogle_img" onclick="actionToggle(event, 'viewTransactions')"
+                src="img/icons8-off-50.png" /></h1>
+
+        <section id="viewTransactions">
+
+            <p>
+                Un fichier CSV mensuel exporté depuis la banque (ou depuis un autre rapport).
+                Les données du dernier fichier selectionné sont chargées automatiquement depuis le local storage! Les
+                colonnes 1, 3 et 7 sont respectivement : quand, quoi et combien.
+            </p>
+            <input type="file" id="triggerImportCSVTransactions" accept=".csv" /><br>
+            Dernier import : <span id="lastImportDate_transactions"></span>
+            <p>
+                Export des données de base pour régenerer le rapport : la liste des entrées et sorties et la liste de
+                categories et keywords associés.
+            </p>
+            <p>
+                <button onclick="actionExportCSVTransactions()">Exporter transactions</button> (importable)
+            </p>
+
+
             <h2>Entrées <span></span></h2>
-            <table id="tableIn">
-                <tr>
-                    <th>Quand</th>
-                    <th>Quoi</th>
-                    <th>Combien</th>
-                </tr>
-            </table>
+            <table id="tableIn"></table>
 
             <h2>Sorties</h2>
-            <table id="tableOut">
-                <tr>
-                    <th>Quand</th>
-                    <th>Quoi</th>
-                    <th>Combien</th>
-                </tr>
-            </table>
+            <table id="tableOut"></table>
         </section>
 
 
 
 
-        <h1>Résumé par catégorie <img class="toogle_img" id="vueResumeParCategorieTitle"
-                onclick="actionToggle(event, 'vueResumeParCategorie')" src="img/icons8-off-50.png" /> </h1>
-        <section id="vueResumeParCategorie">
+        <h1>Catégories <img class="toogle_img" onclick="actionToggle(event, 'viewCategories')"
+                src="img/icons8-off-50.png" /> </h1>
+
+        <section id="viewCategories">
+
+            <p>Impoerter CSV : Catégories et mots-clés associés. Il faut le mettre à jour à chaque nouveau créancier et
+                l'importer.</p>
+
+            <input type="file" id="triggerImportCSVCategories" accept=".csv" class="button" /><br>
+            Dernier import : <span id="lastImportDate_categories"></span>
+
+            <p>
+                <button onclick="actionExportCSVCategories()"> Exporter catégories et mots-clés</button> (importable)
+            </p>
+
             <table id="tableResumeCategorie">
                 <tr>
                     <th>Catégorie</th>
@@ -117,13 +87,13 @@
 
 
 
-        <h1>Détail par catégorie <img class="toogle_img" id="vueDetailsCategoriesTitle"
-                onclick="actionToggle(event, 'vueDetailsCategories')" src="img/icons8-off-50.png" /> </h1>
-        <section id="vueDetailsCategories"></section>
+        <h1>Catégories : détail<img class="toogle_img" onclick="actionToggle(event, 'viewDetailsCategories')"
+                src="img/icons8-off-50.png" /> </h1>
+        <section id="viewDetailsCategories"></section>
 
-        <h1>Resumé par mot clé <img class="toogle_img" id="toggleByCategory"
-                onclick="actionToggle(event, 'vueResumeKeywords')" src="img/icons8-off-50.png" /> </h1>
-        <section id="vueResumeKeywords">
+        <h1>Mots-clès <img class="toogle_img" id="toggleByCategory" onclick="actionToggle(event, 'viewKeywords')"
+                src="img/icons8-off-50.png" /> </h1>
+        <section id="viewKeywords">
             <table id="tableResumeKeywords">
                 <tr>
                     <th>Keyword</th>
@@ -134,21 +104,41 @@
 
 
 
-        <h1>Gestion des prévisions <img class="toogle_img" id="vueGestionPrevisionTitle"
-                onclick="actionToggle(event, 'vueGestionPrevision')" src="img/icons8-off-50.png" /> </h1>
-        <section id="vueGestionPrevision">
+        <h1>Budget <img class="toogle_img" onclick="actionToggle(event, 'viewBudget')" src="img/icons8-off-50.png" />
+        </h1>
+        <section id="viewBudget">
+            <p>
+                <input type="file" id="triggerImportCSVPrevisions" accept=".csv" /><br>
+                Dernier import : <span id="lastImportDate_previsions"></span>
+            </p>
+            <p>
+                <button onclick="actionExportCSVPrevisions()">Exporter les prévsions</button> (importable)
+            </p>
             <table id="tablePrevisions"></table>
+        </section>
+
+        <h1>Sauvegarde</h1>
+        <section class="visible">
+            <p>
+                Pour une sauvegrade complète du rapport il faut juste imprimer la page en PDF pour avoir un snapshot du
+                rapport (CTRL P).</p>
+            <p>
+                <button onclick="window.print()">Capturer la vue actuelle</button>
+            </p>
         </section>
 
     </div>
 
     <!-- scripts -->
-    <script src="common.js"></script>
+    <script src="dom.js"></script>
+    <script src="util.js"></script>
     <script src="storage.js"></script>
+    <script src="display.js"></script>
+    <script src="io.js"></script>
+    <script src="synthese.js"></script>
+    <script src="previsions.js"></script>
     <script src="transactions.js"></script>
     <script src="categories.js"></script>
-    <script src="previsions.js"></script>
-    <script src="synthese.js"></script>
     <script src="main.js"></script>
     <script src="test.js"></script>
 </body>
