- calcul + affiche synthese entrees/sorties - afficher date de modification

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
     <div class="container">
 
-        <h1>Synthèse <img class="toogle_img" onclick="actionToggle(event, 'viewSynthese')"
-                src="img/icons8-off-50.png" />
+        <h1>Synthèse <img class="toogle_img" onclick="actionToggle(event, 'viewSynthese')" src="img/icons8-off-50.png" />
         </h1>
 
         <section id="viewSynthese">
@@ -31,8 +30,7 @@
 
 
 
-        <h1>Transactions <img class="toogle_img" onclick="actionToggle(event, 'viewTransactions')"
-                src="img/icons8-off-50.png" /></h1>
+        <h1>Transactions <img class="toogle_img" onclick="actionToggle(event, 'viewTransactions')" src="img/icons8-off-50.png" /></h1>
 
         <section id="viewTransactions">
 
@@ -62,8 +60,7 @@
 
 
 
-        <h1>Catégories <img class="toogle_img" onclick="actionToggle(event, 'viewCategories')"
-                src="img/icons8-off-50.png" /> </h1>
+        <h1>Catégories <img class="toogle_img" onclick="actionToggle(event, 'viewCategories')" src="img/icons8-off-50.png" /> </h1>
 
         <section id="viewCategories">
 
@@ -87,12 +84,10 @@
 
 
 
-        <h1>Catégories : détail<img class="toogle_img" onclick="actionToggle(event, 'viewDetailsCategories')"
-                src="img/icons8-off-50.png" /> </h1>
+        <h1>Catégories : détail<img class="toogle_img" onclick="actionToggle(event, 'viewDetailsCategories')" src="img/icons8-off-50.png" /></h1>
         <section id="viewDetailsCategories"></section>
 
-        <h1>Mots-clès <img class="toogle_img" id="toggleByCategory" onclick="actionToggle(event, 'viewKeywords')"
-                src="img/icons8-off-50.png" /> </h1>
+        <h1>Mots-clès <img class="toogle_img" id="toggleByCategory" onclick="actionToggle(event, 'viewKeywords')" src="img/icons8-off-50.png" /> </h1>
         <section id="viewKeywords">
             <table id="tableResumeKeywords">
                 <tr>
@@ -124,6 +119,9 @@
                 rapport (CTRL P).</p>
             <p>
                 <button onclick="window.print()">Capturer la vue actuelle</button>
+            </p>
+            <p>
+                Dernière modification : <span id="changeDate"></span>
             </p>
         </section>
 
