- refactio main export transaction - calcul syntese des entrees - DOing : synthese tresor

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         </h1>
 
         <section id="viewSynthese">
-            <h2>Totaux budget</h2>
+            <h2>Prevision</h2>
             <table id="tableSynthese1"></table>
-            <h2>Totaux mois</h2>
+            <h2>Mois</h2>
             <table id="tableSynthese2"></table>
+            <h2>Trésor</h2>
+            <table id="tableSynthese3"></table>
         </section>
 
 
