Regroupper Catégories et keeywords dans la mme vue

--- a/index.html
+++ b/index.html
@@ -112,29 +112,12 @@
 
         <section>
             <div class="section_title"></div>
-            <div id="viewCategories">
-
-                <table id="tableResumeCategorie"> </table>
-
-
-            </div>
+            <div id="viewCategories"></div>
         </section>
 
         <section>
             <div class="section_title"></div>
             <div id="viewDetailsCategories"></div>
-        </section>
-
-        <section>
-            <div class="section_title"></div>
-            <div id="viewKeywords">
-                <table id="tableResumeKeywords">
-                    <tr>
-                        <th>Keyword</th>
-                        <th>Somme</th>
-                    </tr>
-                </table>
-            </div>
         </section>
 
         <section>
