Fonctionnalités : - trier mot clés select AZ - supprimer une categorie et les keywords sont assignés à 'inconnue' - assigner un mot clé à une categorie - supprimer categorie impossible si pas de categorie 'inconnue' - empecher suppression de la categorie 'inconnue'
Autres :
- recadrage des images
- refaco
- suppression entete de tableau
- mode edition pour budget
- modif noms entetes budget
- style keywords
- trier budget ordre croissant de montant
- changer ordre des vues

--- a/index.html
+++ b/index.html
@@ -95,21 +95,6 @@
 
         <section>
             <div class="section_title"></div>
-            <div id="viewTransactions">
-
-                <h2>Entrées <span></span></h2>
-                <table id="tableIn"></table>
-
-                <h2>Sorties</h2>
-                <table id="tableOut"></table>
-
-                <br>
-
-            </div>
-        </section>
-
-        <section>
-            <div class="section_title"></div>
             <div id="viewCategories"></div>
         </section>
 
@@ -120,9 +105,18 @@
 
         <section>
             <div class="section_title"></div>
-            <div id="viewBudget">
-                <table id="tablePrevisions"></table>
+            <div id="viewTransactions">
+                <h2>Entrées <span></span></h2>
+                <table id="tableIn"></table>
+
+                <h2>Sorties</h2>
+                <table id="tableOut"></table>
             </div>
+        </section>
+
+        <section>
+            <div class="section_title"></div>
+            <div id="viewBudget"></div>
         </section>
 
 
