--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
 <body>
     <div class="container" id="container">
-
+        <h1 class="app_title">RDMP : Rapport.Dépenses.Mensuelles.Personnelles</h1>
         <section>
-            <div id="notice" class="section_title"></div>
-            <div id="viewNotice">
+            <div id="notice" class="view_header"></div>
+            <div id="viewNotice" class="view_body">
+
+
                 <h2>Quick Start</h2>
-                <br>
                 <p>Pas d'ordre d'import :</p>
                 <ul>
                     <li>Import CSV de transactions du mois, ficher exporté depuis :</li>
@@ -29,61 +30,68 @@
                 </ul>
                 <p>Les fichiers exporté depuis l'app peuvent être reimporté</p>
 
+
                 <h2>1. Transactions</h2>
-                <br>
-                <ul>
-                    <li>Fichier CSV mensuel exporté depuis la banque (ou depuis un autre rapport).</li>
-                    <li>Les données du dernier fichier importé sont chargées automatiquement depuis le local storage.</li>
-                    <li>Les colonnes 1, 3 et 7 sont respectivement : quand, quoi et combien.</li>
-                </ul>
-                <br>
-                <input type="file" id="triggerImportCSVTransactions" accept=".csv" /><br>
+                <p>
+                    Fichier CSV mensuel exporté depuis la banque (ou depuis un autre rapport).
+                </p>
+                <p>
+                    Les données du dernier fichier importé sont chargées automatiquement depuis le local storage.
+                </p>
+                <p>
+                    Les colonnes 1, 3 et 7 sont respectivement : quand, quoi et combien.
+                </p>
+
+                <input type="file" id="triggerImportCSVTransactions" accept=".csv" hidden />
+                <img src="img/icons8-import-csv-64.png" onclick="actionImportTransactions()" class="impex">
                 Dernier import : <span id="lastImportDate_transactions"></span>
 
-                <button onclick="actionExportCSVTransactions()">Exporter transactions</button> (importable)
+                <img src="img/icons8-export-64.png" onclick="actionExportCSVTransactions()" class="impex"> (importable)
+
 
                 <h2>2. Catégories & Mots-clès</h2>
-                <br>
                 <p>Importer CSV : Catégories et mots-clés associés. Il faut le mettre à jour à chaque nouveau créancier et
-                    l'importer. MàJ possible soit !</p>
+                    l'importer. MàJ possible soit :</p>
 
                 <ul>
                     <li>directement dans l'app</li>
                     <li>Soit editer le fichier CSV et importer</li>
                 </ul>
                 <br>
-                <input type="file" id="triggerImportCSVCategories" accept=".csv" class="button" /><br>
+                <input type="file" id="triggerImportCSVCategories" accept=".csv" hidden />
+                <img src="img/icons8-import-csv-64.png" onclick="actionImportCategories()" class="impex">
                 Dernier import : <span id="lastImportDate_categories"></span>
 
-                <button onclick="actionExportCSVCategories()"> Exporter catégories & mots-clés</button> (importable)
+                <img src="img/icons8-export-64.png" onclick="actionExportCSVCategories()" class="impex"> (importable)
+
 
                 <h2>3. Budget</h2>
-                <br>
                 <p>
-                    <input type="file" id="triggerImportCSVPrevisions" accept=".csv" /><br>
+                    <input type="file" id="triggerImportCSVPrevisions" accept=".csv" hidden />
+                    <img src="img/icons8-import-csv-64.png" onclick="actionImportBudget()" class="impex">
+
                     Dernier import : <span id="lastImportDate_previsions"></span>
                 </p>
+                <img src="img/icons8-export-64.png" onclick="actionExportCSVPrevisions()" class="impex"> (importable)
 
-                <button onclick="actionExportCSVPrevisions()">Exporter budget</button> (importable)
 
                 <h2>4. Sauvegarde</h2>
-                <br>
                 <p>
-                    Pour une sauvegrade complète du rapport il faut juste imprimer la page en PDF pour avoir un snapshot du
-                    rapport (CTRL P).</p>
+                    Imprimer en PDF. Pour garder tous le CSS : Cocher "Plus de paramètres" > "Graphiques d'arrière plan".
+                </p>
                 <p>
-                    <button onclick="window.print()">Capturer la vue actuelle</button>
+                    <img src="img/icons8-export-pdf-64.png" onclick="actionPrint()" class="impex" /> [ CTRL P ]
                 </p>
                 <p>
                     Dernière modification : <span id="changeDate"></span>
                 </p>
-
             </div>
         </section>
+        <hr>
 
         <section>
-            <div class="section_title"></div>
-            <div id="viewSynthese">
+            <div class="view_header"></div>
+            <div id="viewSynthese" class="view_body">
                 <h2>Prévisions</h2>
                 <table id="tableSynthese1"></table>
                 <h2>Mois</h2>
@@ -92,20 +100,23 @@
                 <table id="tableSynthese3"></table>
             </div>
         </section>
+        <hr>
 
         <section>
-            <div class="section_title"></div>
-            <div id="viewCategories"></div>
+            <div class="view_header"></div>
+            <div id="viewCategories" class="view_body"></div>
         </section>
+        <hr>
 
         <section>
-            <div class="section_title"></div>
-            <div id="viewDetailsCategories"></div>
+            <div class="view_header"></div>
+            <div id="viewDetailsCategories" class="view_body"></div>
         </section>
+        <hr>
 
         <section>
-            <div class="section_title"></div>
-            <div id="viewTransactions">
+            <div class="view_header"></div>
+            <div id="viewTransactions" class="view_body">
                 <h2>Entrées <span></span></h2>
                 <table id="tableIn"></table>
 
@@ -113,17 +124,13 @@
                 <table id="tableOut"></table>
             </div>
         </section>
+        <hr>
 
         <section>
-            <div class="section_title"></div>
-            <div id="viewBudget"></div>
+            <div class="view_header"></div>
+            <div id="viewBudget" class="view_body"></div>
         </section>
-
-
-
-
     </div>
-
     <!-- scripts -->
     <script src="dom.js"></script>
     <script src="util.js"></script>
