--- a/compta/index.html
+++ b/compta/index.html
@@ -139,10 +139,16 @@
     <script src="../common/display.js"></script>
     <script src="display.js"></script>
     <script src="io.js"></script>
+
     <script src="synthese.js"></script>
     <script src="previsions.js"></script>
     <script src="transactions.js"></script>
-    <script src="categories.js"></script>
+
+    <script src="categories_storage.js"></script>
+    <script src="categories_manager.js"></script>
+    <script src="categories_controller.js"></script>
+    <script src="categories_viewer.js"></script>
+
     <script src="main.js"></script>
     <script src="test.js"></script>
 </body>
